Fix image responsiveness

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
        <P class="testimonals-contact">
         <a href="malito:visiontutorialacademy@gmail.com">visiontutorialacademy@gmail.com</a><br>
         <a href="https://www.vatc.co.za" target="_blank">www.vatc.co.za</a><br>
-        contact: 067 630 5844
+        contact: 072 697 9154
+        Tiktok :vatc_forthenation
        </P>
-     <span>-Vison Academy Tutorial Center</span>
+     <span>-Vision Academy Tutorial Center</span>
       </blockquote>
 
     </section>
