change portfolio to table forms 3+3

--- a/index.html
+++ b/index.html
@@ -78,16 +78,21 @@
     <h2>Portfolio</h2>
    
     <p class="portfolio-intro">Heres a peek into some of the design work I've done for clients, including Vision Academy. </p>
- <div class="galley">
-  <img src="imagine/IMG-20250704-WA0004.jpg" alt="Design 1">
-  <img src="imagine/IMG-20250704-WA0005.jpg" alt="Design 2">
-  <img src="imagine/IMG-20250704-WA0006.jpg" alt="Design 3">
-  <img src="imagine/IMG-20250704-WA0009.jpg" alt="Design 4">
-  <img src="imagine/WhatsApp Image 2025-07-04 at 19.28.00_c88accfa.jpg" alt="Design 5">
-  <img src="imagine/WhatsApp Image 2025-07-04 at 23.02.38_03e57788.jpg" alt="Design 6">
-
- </div>
-  </section>
+ <section class="portfolio">
+  <table>
+    <tr>
+      <td><img src="imagine/IMG-20250704-WA0004.jpg" alt="Design 1"></td>
+      <td><img src="imagine/IMG-20250704-WA0005.jpg" alt="Design 2"></td>
+      <td><img src="imagine/IMG-20250704-WA0006.jpg" alt="Design 3"></td>
+    </tr>
+    <tr>
+      <td><img src="imagine/IMG-20250704-WA0009.jpg" alt="Design 4"></td>
+      <td><img src="imagine/IMG-20250704-WA0009.jpg" alt="Design 5"></td>
+      <td><img src="imagine/WhatsApp Image 2025-07-04 at 19.27.57_666afa8b.jpg" alt="Design 6"></td>
+    </tr>
+  </table>
+ </section>
+ 
   <section class="contact">
     <h2> Let's work to together</h2>
     <p>Whatsapp me <a href="https://wa.me/27676305944">067 630 5844</a></p>
