Added new portfolio images

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
   <!-- Portfolio (text only, no images) -->
   <section class="portfolio">
     <h2>Portfolio</h2>
+    <div class="galley">
+      <img src="imagine/IMG-20250704-WA0004.jpg" alt="Design 1">
+      <img src="imagine/IMG-20250704-WA0005.jpg" alt="Design 2">
+      <img src="imagine/IMG-20250704-WA0006.jpg" alt="Design 3">
+      <img src="imagine/IMG-20250704-WA0009.jpg" alt="Design 4">
+    </div>
   </section>
 
   <!-- Contact -->
